[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/sawblade.png" type="Texture" id=1]
[ext_resource path="res://objects/hazard/SawBlade.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("StaticSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, -10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpinningSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Saw" type="Node2D"]
script = ExtResource( 2 )

[node name="SawBlade" type="StaticBody2D" parent="." groups=["killer", "sawblade"]]

[node name="Delay" type="Timer" parent="SawBlade"]
one_shot = true

[node name="Anim" type="AnimationPlayer" parent="SawBlade"]
anims/anim = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SawBlade"]
shape = SubResource( 1 )

[node name="StaticSprite" type="Sprite" parent="SawBlade"]
texture = ExtResource( 1 )
hframes = 2

[node name="SpinningSprite" type="Sprite" parent="SawBlade"]
visible = false
texture = ExtResource( 1 )
hframes = 2
frame = 1

[connection signal="timeout" from="SawBlade/Delay" to="." method="_on_Delay_timeout"]
